backend first try awating frontend and mqtt connection to test correcty
