# server/api/Dtos/GameCommandDto.cs
@@ -1,0 +1,5 @@
+public class GameCommandDto
+{
+    public string Game { get; set; }
+    public string Action { get; set; }
+}
