# server/api/Dtos/GameScoreDto.cs
@@ -1,0 +1,6 @@
+public class GameScoreDto
+{
+    public string Game { get; set; } = string.Empty;
+    public string PlayerName { get; set; } = string.Empty;
+    public int Score { get; set; }
+}
